--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-.App {
-  text-align: center;
-  background-color: lavender;
-  height: 100vh;
+body {
+  background-color: rgb(35, 35, 37);
+  color: whitesmoke;
 }
 
 .App-logo {
