--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,13 @@ body {
 
 .nav-list {
   display: inline-flex;
-  justify-content: left;
+  justify-content: space-around;
   align-items: center;
+  background-color: #05d9fe;
   height: inherit;
   margin:  0 auto;
-  padding: 0;
-  width: 70%;
+  padding: 10px;
+  width: 100%;
   margin-left: 0px;
 }
 
@@ -54,7 +55,7 @@ body {
   padding-top: 12px;
   padding-bottom: 12px;
   margin: 5px;
-  background: #09e6bc;
+  background: #05d9fe;
   border-radius: 9px;
   line-height: 2;
   text-align: right;
@@ -79,6 +80,64 @@ body {
   color: black;
   background: #09e6bc;
   transform: scale(1.04);
+}
+
+.combine-div {
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+.landing-page-divs {
+  display: flex;
+  justify-content: center;
+  width: 70%;
+  background-color: slategray;
+  flex-direction: column; 
+  margin: 100px auto;
+  height: 300px;
+  padding: 0px 30px;
+  border-radius: 5px; 
+  line-height: 30px;
+}
+
+.landing-page-divs-2 {
+  justify-content: center;
+  width: 85%;
+  background-color: slategray;
+  flex-direction: column; 
+  margin: 0px 10px 20px 10px;
+  height: 300px;
+  padding: 0px 30px;
+  border-radius: 5px; 
+  line-height: 30px;
+  display: flex;
+}
+
+.landing-page-divs-pc {
+  display: inline-flex;
+  justify-content: center;
+  width: 30%;
+  background-color: slategray;
+  flex-direction: column; 
+  padding: 10px 30px;
+  border-radius: 5px; 
+  height: 700px;
+  line-height: 30px;
+}
+
+.landing-div-content {
+  background-color : #282c34;
+  height: 400px;
+  width: 85%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px; 
+  padding: 0px 30px;
+  margin: 0px 10px 20px 10px;
+  border:2px whitesmoke solid;
 }
 
 .ptag {
