--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgb(35, 35, 37);
   color: whitesmoke;
+  overflow-x: hidden;
 }
 
 .App-logo {
@@ -19,7 +20,7 @@ body {
 }
 
 .App-link {
-  color: #09d3ac;
+  color: #09b7d6;
 }
 
 .nav {
@@ -43,8 +44,9 @@ body {
   height: inherit;
   margin:  0 auto;
   padding: 10px;
-  width: 100%;
+  width: 99%;
   margin-left: 0px;
+ 
 }
 
 .nav-list__item {
@@ -78,7 +80,7 @@ body {
 
 .nav-list__item:hover {
   color: black;
-  background: #09e6bc;
+  background: #09b7d6;
   transform: scale(1.04);
 }
 
@@ -92,7 +94,7 @@ body {
 .landing-page-divs {
   display: flex;
   justify-content: center;
-  width: 70%;
+  width: 75%;
   background-color: slategray;
   flex-direction: column; 
   margin: 100px auto;
@@ -129,14 +131,14 @@ body {
 
 .landing-div-content {
   background-color : #282c34;
-  height: 400px;
-  width: 85%;
+  height: 360px;
+  width: 84%;
   display: inline-flex;
   justify-content: center;
   align-items: center;
   border-radius: 5px; 
   padding: 0px 30px;
-  margin: 0px 10px 20px 10px;
+  margin: 35px 10px 20px 10px;
   border:2px whitesmoke solid;
 }
 
