--- a/src/App.css
+++ b/src/App.css
@@ -188,3 +188,7 @@ body {
     border-radius: 5px;
     box-shadow: 0 4px 8px 7px rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
+
+  .picJob {
+    width: -webkit-fill-available;
+  }
