--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ body {
   padding: 10px;
   width: 99%;
   margin-left: 0px;
+  
  
 }
 
@@ -191,4 +192,5 @@ body {
 
   .picJob {
     width: -webkit-fill-available;
+    box-shadow: 0 4px 8px 7px rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
