--- a/src/App.css
+++ b/src/App.css
@@ -197,4 +197,5 @@ body {
   .picJob {
     width: -webkit-fill-available;
     box-shadow: 0 4px 8px 7px rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 6px;
   }
