changed footer styles

--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,7 @@ body {
   }
 
   .gettingStartedVideoDiv1 {
-    background-color: purple; 
+    background-color: #05d9fe; 
     height: 70vh; 
     width: 96%; 
     display: flex;
